fix: no tabs page to be visible in light theme

--- a/src/base/styles/index.css
+++ b/src/base/styles/index.css
@@ -23,7 +23,8 @@
 
 	.titlebar,
 	.controls,
-	#settings > * {
+	#settings > *,
+	.no-tabs-exist {
 		filter: var(--theme-filter, none);
 	}
 
